# CourseWorkSP

./: CMakeLists.txt  DR_trace.cpp  general_headers.h  lowercase_string.cpp  lowercase_string.h  modules_info.cpp  modules_info.hpp
